crates/lex/src/tests/snapshots/semi_keyword_1.snap
---
source: crates/lex/src/tests.rs
assertion_line: 172
expression: "(test[1], tokens)"
---
- let
- Ok:
    - tt: Let
      line: 1
      column: 1

